# mdformat-pyproject

./: .gitignore  .mdformat.toml  .pre-commit-config.yaml  .pre-commit-test.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  codecov.yml  tests.yml
mdformat_pyproject/: __init__.py  plugin.py
tests/: fixtures.md  pre-commit-test.md  test_fixtures.py  test_plugin.py
tests/mdformat_toml/: pre-commit-test.md
