[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mdformat_pyproject"
authors = [
    { name = "Carles Sala", email = "csala@csail.mit.com" },
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mdformat", "markdown", "markdown-it"]
requires-python = ">=3.7"
dependencies = [
    "mdformat ~=0.7",
    "tomli ~=2.0; python_version < '3.11'"
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest~=6.0",
    "coverage",
    "pytest-cov",
]
dev = ["pre-commit"]

[project.urls]
Homepage = "https://github.com/csala/mdformat-pyproject"

[project.entry-points."mdformat.parser_extension"]
pyproject = "mdformat_pyproject"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/"]

[tool.isort]
profile = "black"

[tool.mdformat]
wrap = 99
number = true

[tool.coverage.report]
exclude_lines = [
    '^ *import '
]

[tool.black]
line_length = 99

[tool.flake8]
max-line-length = 99
